# qa_guru_homework2

./: .gitignore  main.py  min_test_02.py  r_test_form_04.py  requirements.txt  test_errors.py  test_open.py
merge/: pyproject.toml
