[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "QA",email = "aishams83@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "numpy (>=2.5.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
